# icarus

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENCE  README.md  TODO.md  docker-compose.yml  package-lock.json
agent/: Cargo.toml
agent/src/: main.rs  state.rs  utils.rs
agent/src/requests/: agents.rs  mod.rs  models.rs
agent/src/rt_client/: handshake.rs  mod.rs  packet_handler.rs  rt_client.rs  update.rs
agent/src/tasks/: download.rs  explorer.rs  mod.rs  models.rs  powershell_command.rs  shell.rs  shell_command.rs  upload.rs
bruno/Agents/: Create Agent.bru  Create Network Data.bru  Update Hardware Data.bru
bruno/environments/: Icarus.bru
doc/: tmp.md  ws.md
doc/bruno/: bruno.json
doc/bruno/Agents/: Create Agent.bru  Create Hardware Data.bru  Create Network Data.bru  Delete Agent.bru  Get Agent Tasks.bru  Get All Agents.bru  Get Single Agent.bru  Update Agent.bru  Update Hardware Data.bru  Update Network Data.bru
doc/bruno/Payloads/: Get Agent.bru  Get Stage 1.bru  Get Stage 2.bru
doc/bruno/Tasks/: Create Task.bru  Get Tasks.bru
doc/bruno/environments/: Icarus.bru
doc/endpoints/: agents.md
doc/protocols/: connection_routine.md  file_upload.md  handshake.md  main_loop.md  task.md
doc/protocols/connections/: agent_update.md  file_upload.md  main.md
doc/protocols/packets/: encryption_response.md  login_request.md  task_request.md  task_response.md  update_request.md  update_response.md
doc/protocols/packets/handshake/: encryption_request.md  login_request.md
server/: Cargo.toml  Dockerfile  diesel.toml
server/migrations/2025-01-26-183946_create_agents/: down.sql  up.sql
server/migrations/2025-02-04-123300_create_tasks/: down.sql  up.sql
server/src/: main.rs  schema.rs  utils.rs
server/src/agents/: models.rs  routes.rs  services.rs
server/src/api/: mod.rs
server/src/explorer/: services.rs
server/src/live/: connection.rs  handshake.rs  mod.rs  packet_handler.rs  rt_server.rs
server/src/live/connection/: download.rs  main.rs  mod.rs  update.rs
server/src/state/: agent.rs  connection.rs  mod.rs  task.rs
server/src/tasks/: models.rs  route.rs  routes.rs  services.rs
server/src/web/: mod.rs  services.rs  templates.rs
server/src/ws/: services.rs
server/templates/: about.html  agent.html  agents.html  base-layout.html  content.html  home.html  layout.html  payloads.html  sidebar.html  task.html  tasks.html
server/templates/agents/: agents-layout.html  explorer.html  index.html  payloads.html  settings.html  tasks.html
server/templates/tasks/: index.html
setup/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
shared/src/encryption/: aes.rs  rsa.rs
shared/src/models/: connection_type.rs  mod.rs  task_status.rs  task_type.rs
shared/src/packets/: download_request.rs  download_response.rs  encryption_request.rs  encryption_response.rs  login_request.rs  mod.rs  task_request.rs  task_response.rs  update_request.rs  update_response.rs
stage-1/: Cargo.toml
stage-1/src/: main.rs  network.rs  persistence.rs
stage-2/: Cargo.toml
web-ui/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
web-ui/src/: app.html
web-ui/src/components/: agent-nav.svelte  sidebar.svelte
web-ui/src/components/modals/: create-task.svelte
web-ui/src/lib/: index.ts  state.svelte.ts  types.ts  utils.ts
web-ui/src/lib/components/: agent-element.svelte  agent-nav.svelte  header.svelte  hljs.svelte  nav-drawer.svelte  sidebar.svelte
web-ui/src/lib/components/agent/: agent-element.svelte
web-ui/src/lib/components/explorer/: file-option.svelte  wrapper.svelte
web-ui/src/lib/components/tasks/: task-row.svelte
web-ui/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
web-ui/src/routes/agents/: +page.svelte  +page.ts
web-ui/src/routes/payloads/: +page.svelte
web-ui/src/routes/settings/: +page.svelte
web-ui/src/routes/tasks/: +page.svelte  +page.ts
(+12 files in other folders)
