[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.39.3", features = ["full"] }

uuid = { version = "1.10.0", features = ["v4", "serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sysinfo = { version = "0.31.4", features = ["system"] }
rand = "0.8.5"
