[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.39.3", features = ["full"] }

chrono = "0.4.38"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace", "fs", "cors"] }
askama = "0.12.1"
http = "1.1.0"
socketioxide = { version = "0.14.1", features = ["state"] }
