[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"

axum = { version = "0.8.1", features = ["macros", "multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs", "cors"] }
http = "1.2.0"
# socketioxide = { version = "0.16.0", features = ["state"] }

uuid = { version = "1.12.1", features = ["v4", "fast-rng", "serde"] }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

shared = { path = "../shared" }

chrono = { version = "0.4.39", features = ["serde"] }

rsa = { version = "0.9.7", features = ["sha2"] }
aes-gcm = "0.10.3"
rand = "0.9"
