[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "serde"] }
aes-gcm = "0.10.3"
rand = "0.9"
rsa = { version = "0.9.7", features = ["sha2"] }
hex-literal = "0.4"
hex = "0.4.3"
